compiler/fir/analysis-tests/testData/resolve/problems/classLiteralWithExclExcl.kt
// ISSUE: KT-47373

class B<T>
konst any2 = <!UNRESOLVED_REFERENCE!><!NO_COMPANION_OBJECT!>B<!>!!<!><<!UNRESOLVED_REFERENCE!>T<!>>::class
